--- a/style.css
+++ b/style.css
@@ -1,307 +1,334 @@
-body {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    height: 100vh;
-    width: 100%;
-    background-color: #BABABA;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    align-content: center;
-}
+@media screen and (min-width: 960px) {
 
-main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
+    body {
+        margin: 0;
+        padding: 0;
+        border: 0;
+        height: 100vh;
+        width: 100%;
+        background-color: #BABABA;
+        display: flex;
+        flex-direction: column;
+    }
 
-#title {
-    position: fixed;
-    top: 1em;
-    display: flex;
-    flex-direction: column;
-    align-items: left;
-    margin-left: -5em;
-    margin-right: 2em;
-    z-index: 3;
-}
+    main {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 
-#title > h1 {
-    position: relative;
-    margin: 0;
-    font-family: sans-serif;
-    font-size: 7rem;
-    color: #2B2929;
-    text-shadow: 0px 2px 4px rgba(255, 255, 255, 0.2);
+    header {
+        width: 100%;
+        position: fixed;
+        background-image: linear-gradient(#BABABA 50%, transparent);
+        z-index: 3;
+        top: 0;
+        
+    }
 
-}
+    #title {
+        top: 1em;
+        z-index: 3;
+    }
 
-#title > h3 {
-    position: relative;
-    margin-top: 0;
-    margin-left: 2em;
-    margin-right: 2em;
-    font-family: sans-serif;
-    font-size: 4rem;
-    color: #2B2929;
-    left: -1.9em;
-    text-shadow: 0px 3px 10px rgba(255, 255, 255, 0.4);
-}
+    #title > h1 {
+        position: relative;
+        margin: 0;
+        font-family: 'Shippori Mincho', serif;
+        font-size: 7rem;
+        color: #2B2929;
+        text-shadow: 0px 2px 4px rgba(255, 255, 255, 0.2);
 
-#slideshow {
-    position: relative;
-    top: 120px;
-    margin: auto;
-    height: 30em;
-    width: 50em;
-    object-fit: cover;
-    margin-top: 8em;
-    margin-bottom: 15em;
-}
+    }
 
+    #title > h3 {
+        position: relative;
+        top: -0.3em;
+        margin-top: 0;
+        margin-left: 2em;
+        margin-right: 2em;
+        font-family: 'Shippori Mincho', serif;
+        font-size: 4rem;
+        color: #2B2929;
+        left: -1.9em;
+        text-shadow: 0px 3px 10px rgba(255, 255, 255, 0.4);
+    }
 
+    #slideshow {
+        position: relative;
+        top: 17em;
+        height: 25em;
+        width: 45%;
+        object-fit: fill;
+        margin: auto;
+    }
 
-.slides {
-    height: 100%;
-    width: auto;
-    position: absolute;
-    object-fit: cover;
-    border-radius: 20px;
-    opacity: 0; 
-    transition: opacity 1s ease-in-out;
-}
+    .slides {
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        border-radius: 25px;
+        margin: auto;
+    }
 
-.project {
-    background-color: #cccccc;
-    height: 55vh;
-    width: 80vw;
-    margin-left: auto;
-    margin-right: auto;
-    justify-self: center;
-    border-radius: 20px;
-    margin-bottom: 10em;
-}
+    #fancy-pic-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: relative;
+        height: 5em;
+        width: 40%;
+        object-fit: fill;
+        top: 24.5em;
+    }
 
+    #fancy-pic {
+        object-fit: fill;
+        height: 4em;
+        width: 40%;
+        opacity: 0.5;
+    }
 
+    .project {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        top: 20em;
+        margin: 5em;
+        border: 0;
+        flex-grow: 1;
+        position: relative;
+        background-color: #cccccc;
+        height: 25em;
+        width: 70%;
+        border-radius: 25px;
+    }
 
+    .project-details {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 
+    #my-pic {
+        height: 18em;
+        width: auto;
+    }
 
-
-
-
-
-
-
+    #kenny-paragraph {
+        margin: 2em;
+        text-align: left;
+        margin-top: auto;
+        margin-bottom: auto;
+    }
 
 /* Contact Links */
-#links {
-    position: fixed;
-    bottom: 0;
-    left: -4em;
-    display: flex;
-    flex-direction: row;
-    height: 100px;
-    width: 300px;
-    margin-right: 3em;
-    border: 0;
-    width: 100vw;
-    justify-content: flex-end;
-    z-index: 3;
+    #links {
+        position: fixed;
+        bottom: 0;
+        left: -4em;
+        display: flex;
+        flex-direction: row;
+        height: 100px;
+        width: 300px;
+        margin-right: 3em;
+        border: 0;
+        width: 100vw;
+        justify-content: flex-end;
+        z-index: 3;
+    }
+
+    .link-img {
+        height: 50px;
+        width: auto;
+        margin: 0.5em;
+        border: 0;
+        top: 30px;
+        color: #2B2929;
+    }
+
+    #icon-1 {
+        border-radius: 3px;
+    }
+    #icon-2 {
+        border-radius: 3px;
+    }
+    #icon-3 {
+        border-radius: 45px;
+    }
+    #icon-cv {
+        border-radius: 5px;
+    }
+
+    .link-img:hover {
+        box-shadow: 1px 4px 20px rgba(255, 255, 255, 0.8);
+        box-shadow: -1px -4px -10px rgba(255, 255, 255, 0.8);
+    }
+    .cv_tooltip {
+        position: relative;
+        display: inline-block;
+    }
+
+    .cv_tooltip .tooltiptext_cv {
+        visibility: hidden;
+        background-color: #007286;
+        color: #fff;
+        text-align: center;
+        padding: 5px 0;
+        border-radius: 6px;
+        position: absolute;
+        left: -68px;
+        top: -35px;
+        z-index: 1;
+        width: 200px;
+
+    }
+
+    .cv_tooltip:hover .tooltiptext_cv {
+        visibility: visible;
+        
+    }
+    .cv_tooltip .tooltiptext_cv::after {
+        content: " ";
+        position: absolute;
+
+        left: 50%;
+        margin-left: -5px;
+        border-width: 5px;
+        border-style: solid;
+        border-color: #007286 transparent transparent transparent;
+    }
+
+    .email_tooltip {
+        position: relative;
+        display: inline-block;
+    }
+
+    .email_tooltip .tooltiptext_email {
+        visibility: hidden;
+        background-color: #007286;
+        color: #fff;
+        text-align: center;
+        padding: 5px 0;
+        border-radius: 6px;
+        position: absolute;
+        left: -68px;
+        top: -35px;
+        z-index: 1;
+        width: 200px;
+
+    }
+
+    .email_tooltip:hover .tooltiptext_email {
+        visibility: visible;
+        
+    }
+    .email_tooltip .tooltiptext_email::after {
+        content: " ";
+        position: absolute;
+
+        left: 50%;
+        margin-left: -5px;
+        border-width: 5px;
+        border-style: solid;
+        border-color: #007286 transparent transparent transparent;
+    }
+
+    .github_tooltip {
+        position: relative;
+        display: inline-block;
+    }
+
+    .github_tooltip .tooltiptext_github {
+        visibility: hidden;
+        background-color: #007286;
+        color: #fff;
+        text-align: center;
+        padding: 5px 0;
+        border-radius: 6px;
+        position: absolute;
+        left: -68px;
+        top: -35px;
+        z-index: 1;
+        width: 200px;
+
+    }
+
+    .github_tooltip:hover .tooltiptext_github {
+        visibility: visible;
+    }
+    .github_tooltip .tooltiptext_github::after {
+        content: " ";
+        position: absolute;
+
+        left: 50%;
+        margin-left: -5px;
+        border-width: 5px;
+        border-style: solid;
+        border-color: #007286 transparent transparent transparent;
+    }
+
+    .linkedin_tooltip {
+        position: relative;
+        display: inline-block;
+    }
+
+    .linkedin_tooltip .tooltiptext_linkedin {
+        visibility: hidden;
+        background-color: #007286;
+        color: #fff;
+        text-align: center;
+        padding: 5px 0;
+        border-radius: 6px;
+        position: absolute;
+        left: -68px;
+        top: -35px;
+        z-index: 1;
+        width: 200px;
+
+    }
+
+    .linkedin_tooltip:hover .tooltiptext_linkedin {
+        visibility: visible;
+    }
+    .linkedin_tooltip .tooltiptext_linkedin::after {
+        content: " ";
+        position: absolute;
+
+        left: 50%;
+        margin-left: -5px;
+        border-width: 5px;
+        border-style: solid;
+        border-color: #007286 transparent transparent transparent;
+    }
+
+    #blank-space {
+        top: 20em;
+        margin: 5em;
+        border: 0;
+        flex-grow: 1;
+        position: relative;
+        background-color: transparent;
+        height: 0.05em;
+        width: 70%;
+    }
 }
 
-.link-img {
-    height: 50px;
-    width: auto;
-    margin: 0.5em;
-    border: 0;
-
-
-    top: 30px;
-    color: #2B2929;
-}
-
-#icon-1 {
-    border-radius: 3px;
-}
-
-#icon-2 {
-    border-radius: 3px;
-}
-
-#icon-3 {
-    border-radius: 45px;
-}
-
-#icon-cv {
-    border-radius: 5px;
-}
-
-.link-img:hover {
-    box-shadow: 1px 4px 20px rgba(255, 255, 255, 0.8);
-    box-shadow: -1px -4px -10px rgba(255, 255, 255, 0.8);
-}
-
-.cv_tooltip {
-    position: relative;
-    display: inline-block;
-}
-
-  /* Tooltip text */
-.cv_tooltip .tooltiptext_cv {
-    visibility: hidden;
-    background-color: #007286;
-    color: #fff;
-    text-align: center;
-    padding: 5px 0;
-    border-radius: 6px;
-    position: absolute;
-    left: -68px;
-    top: -35px;
-    z-index: 1;
-    width: 200px;
-
-
- /* Use half of the width (120/2 = 60), to center the tooltip */
-}
-
-  /* Show the tooltip text when you mouse over the tooltip container */
-.cv_tooltip:hover .tooltiptext_cv {
-    visibility: visible;
-    
-}
-
-.cv_tooltip .tooltiptext_cv::after {
-    content: " ";
-    position: absolute;
-    top: 100%; /* At the bottom of the tooltip */
-    left: 50%;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: #007286 transparent transparent transparent;
-}
-
-
-.email_tooltip {
-    position: relative;
-    display: inline-block;
-}
-
-  /* Tooltip text */
-.email_tooltip .tooltiptext_email {
-    visibility: hidden;
-    background-color: #007286;
-    color: #fff;
-    text-align: center;
-    padding: 5px 0;
-    border-radius: 6px;
-    position: absolute;
-    left: -68px;
-    top: -35px;
-    z-index: 1;
-    width: 200px;
-
-
- /* Use half of the width (120/2 = 60), to center the tooltip */
-}
-
-  /* Show the tooltip text when you mouse over the tooltip container */
-.email_tooltip:hover .tooltiptext_email {
-    visibility: visible;
-    
-}
-
-.email_tooltip .tooltiptext_email::after {
-    content: " ";
-    position: absolute;
-    top: 100%; /* At the bottom of the tooltip */
-    left: 50%;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: #007286 transparent transparent transparent;
-}
 
 
 
-.github_tooltip {
-    position: relative;
-    display: inline-block;
-}
-
-  /* Tooltip text */
-.github_tooltip .tooltiptext_github {
-    visibility: hidden;
-    background-color: #007286;
-    color: #fff;
-    text-align: center;
-    padding: 5px 0;
-    border-radius: 6px;
-    position: absolute;
-    left: -68px;
-    top: -35px;
-    z-index: 1;
-    width: 200px;
-
-
- /* Use half of the width (120/2 = 60), to center the tooltip */
-}
-
-  /* Show the tooltip text when you mouse over the tooltip container */
-.github_tooltip:hover .tooltiptext_github {
-    visibility: visible;
-}
-
-.github_tooltip .tooltiptext_github::after {
-    content: " ";
-    position: absolute;
-    top: 100%; /* At the bottom of the tooltip */
-    left: 50%;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: #007286 transparent transparent transparent;
-}
 
 
 
-.linkedin_tooltip {
-    position: relative;
-    display: inline-block;
-}
-
-  /* Tooltip text */
-.linkedin_tooltip .tooltiptext_linkedin {
-    visibility: hidden;
-    background-color: #007286;
-    color: #fff;
-    text-align: center;
-    padding: 5px 0;
-    border-radius: 6px;
-    position: absolute;
-    left: -68px;
-    top: -35px;
-    z-index: 1;
-    width: 200px;
 
 
- /* Use half of the width (120/2 = 60), to center the tooltip */
-}
 
-  /* Show the tooltip text when you mouse over the tooltip container */
-.linkedin_tooltip:hover .tooltiptext_linkedin {
-    visibility: visible;
-}
 
-.linkedin_tooltip .tooltiptext_linkedin::after {
-    content: " ";
-    position: absolute;
-    top: 100%; /* At the bottom of the tooltip */
-    left: 50%;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: #007286 transparent transparent transparent;
-}
+
+
+
+
+
+
+
+
