--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@
         position: relative;
         top: 17em;
         height: 25em;
-        width: 45%;
+        width: 40em;
         object-fit: fill;
         margin: auto;
     }
@@ -92,7 +92,7 @@
 
     .project {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(2, 50%);
         top: 20em;
         margin: 5em;
         border: 0;
@@ -121,6 +121,43 @@
         margin-top: auto;
         margin-bottom: auto;
     }
+
+    #project-paragraph {
+        position: relative;
+        top: -2em;
+        margin: 2em;
+        text-align: left;
+        margin-top: auto;
+        margin-bottom: auto;
+    }
+
+    .video-content {
+
+        border: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 90%;
+        width: 90%;
+    }
+
+    .video {
+        top: 1em;
+        position: relative;
+        max-width: 100%; 
+        max-height: 100%;
+        width: auto; 
+        height: auto; 
+        background-size: cover;
+        object-fit: fill;
+        margin-top: auto;
+        margin-bottom: auto;
+    }
+
+
+
+
 
 /* Contact Links */
     #links {
