--- a/style.css
+++ b/style.css
@@ -72,28 +72,10 @@
         margin: auto;
     }
 
-    #fancy-pic-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        position: relative;
-        height: 5em;
-        width: 40%;
-        object-fit: fill;
-        top: 24.5em;
-    }
-
-    #fancy-pic {
-        object-fit: fill;
-        height: 4em;
-        width: 40%;
-        opacity: 0.5;
-    }
-
     .project {
         display: grid;
         grid-template-columns: repeat(2, 50%);
-        top: 20em;
+        top: 12em;
         margin: 5em;
         border: 0;
         flex-grow: 1;
@@ -121,6 +103,43 @@
         margin-top: auto;
         margin-bottom: auto;
     }
+
+    #arrows {
+        position: absolute;
+        top: 85%;
+        left: 50%;
+        transform: translate(50%, 50%);
+}
+
+#arrows > span {
+    display: block;
+    width: 20px;
+    height: 20px;
+    border-bottom: 2px solid #2B2929;
+    border-right: 2px solid #2B2929;
+    border-radius: 5px;
+    transform: rotate(45deg);
+    animation: animate 2s infinite;
+}
+#arrows > span:nth-child(2){
+    animation-delay: 0.2s;
+}
+#arrows > span:nth-child(3){
+    animation-delay: 0.4s;
+}
+@keyframes animate {
+    0%{
+        opacity: 0;
+        transform: rotate(45deg) translate(-5px, -5px);
+    }
+    50%{
+        opacity: 1;
+    }
+    100%{
+        opacity: 0;
+        transform: rotate(45deg) translate(5px, 5px);
+    }
+}
 
     #project-paragraph {
         position: relative;
