--- a/style.css
+++ b/style.css
@@ -98,7 +98,16 @@
     }
 
     #kenny-paragraph {
+        width: 90%;
         margin: 0.1em;
+        text-align: left;
+        margin-top: auto;
+        margin-bottom: auto;
+    }
+
+    #kenny-paragraph > p {
+        border: 1em;
+        margin: 0.5em;
         text-align: left;
         margin-top: auto;
         margin-bottom: auto;
@@ -142,6 +151,15 @@
         transform: rotate(45deg) translate(5px, 5px);
         
     }
+}
+
+.repo-link {
+    text-decoration: none;
+    color: #703535;
+}
+
+.repo-link:hover {
+    color: #3b6da7;
 }
 
     #project-paragraph {
@@ -457,7 +475,7 @@
         text-shadow: 0px 3px 10px rgba(255, 255, 255, 0.4);
     }
 
-    #slideshow {
+    /* #slideshow {
         border: 0;
         margin: 0;
         display: block;
@@ -482,11 +500,11 @@
         width: 100%;
         position: absolute;
         align-self: center;
-    }
+    } */
 
     .project {
         display: block;
-        top: 20em;
+        top: 2em;
         margin: 5em;
         border: 0;
         flex-grow: 1;
@@ -530,25 +548,24 @@
 
     .video-content {
         display: block;
-        align-items: center;
+        justify-content: center;
         border: 0;
         padding: 0;
-        align-items: center;
         height: 90%;
         width: 90%;
     }
 
     .video {
-        top: 1em;
+        display: block;
+        flex-direction: column;
+        justify-content: center;
         position: relative;
+        margin: 0.2em;
         max-width: 100%; 
         max-height: 100%;
         width: auto; 
         height: auto; 
-        background-size: cover;
         object-fit: fill;
-        margin-top: auto;
-        margin-bottom: auto;
     }
 
 
