--- a/phoneStyle.css
+++ b/phoneStyle.css
@@ -11,4 +11,74 @@
         
     }
 
+    main {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        justify-content: center;
+        align-content: center;
+        width: 100%;
+        font-family: 'Shippori Mincho', serif;
+    }
+
+    header {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    #title > h1 {
+        font-size: 3rem;
+    }
+
+    #title > h3 {
+        font-size: 2rem;
+    }
+
+    #my-pic {
+        width: 60%;
+    }
+
+    #kenny-paragraph {
+        margin: 1.5em;
+    }
+
+    .project {
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+        margin: 3em;
+        align-items: center;
+        margin-left: auto;
+        margin-right: auto;
+        background-color: #cccccc;
+        border-radius: 20px;
+    }
+
+    .project-details {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #project-paragraph {
+        margin: 3em;
+        order: 3;
+    }
+
+    .video-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .video {
+        
+        position: relative;
+        width: 90%;
+        margin:3em;
+    }
+
 }
